feat: Se implemento auditoria y control de concurrencia :white_check_mark: :construction_worker:
